Tracks list & Track properties (only instruments list so far)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature android:name="android.hardware.audio.low_latency" />
-    <uses-feature android:name="android.software.midi" android:required="true" />
+    <uses-feature
+        android:name="android.software.midi"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +16,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MIDICryboard"
-
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.TrackPropertiesActivity"
+            android:exported="false"
             android:screenOrientation="landscape"
-            android:exported="true">
+            android:configChanges="orientation|screenSize" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
