--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
 
     implementation 'com.github.billthefarmer:mididriver:v1.24' // Midi Driver
     implementation 'com.github.harjot-oberai:Croller:v1.0.0' // Circular Slider
+    implementation 'com.github.LeffelMania:android-midi-lib:7cdd855c2b' // Midi Files Read & Write
 
 }
