writing my own midi library

--- a/midilib/build.gradle
+++ b/midilib/build.gradle
@@ -1,31 +1,29 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    signingConfigs {
-        release {
-        }
-    }
-    namespace 'com.example.midicryboard'
+    namespace 'com.example.midilib'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.midicryboard"
-        minSdk 26
+        minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -35,6 +33,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version '3.22.1'
+        }
+    }
 }
 
 dependencies {
@@ -42,18 +46,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.preference:preference:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'com.google.oboe:oboe:1.7.0'
 
-    implementation 'com.github.billthefarmer:mididriver:v1.24' // Midi Driver
-    implementation 'com.github.harjot-oberai:Croller:v1.0.0' // Circular Slider
-    implementation 'com.github.LeffelMania:android-midi-lib:7cdd855c2b' // Midi Files Read & Write
-
-    implementation project(":midilib")
 }
