crashes fixed; pointers replaced by shared_ptr

--- a/midilib/src/main/cpp/CMakeLists.txt
+++ b/midilib/src/main/cpp/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library( # Sets the name of the library.
             Wave.cpp
             WaveInstrument.cpp
             WavePiano.cpp
+            WaveSynth.cpp
             Channel.cpp
             NoteFrequency.cpp
             log.cpp
