--- a/midilib/src/main/cpp/CMakeLists.txt
+++ b/midilib/src/main/cpp/CMakeLists.txt
@@ -30,8 +30,9 @@ add_library(
         player/WavePlayer.cpp
         player/AssetPlayer.cpp
         Wave.cpp
-        instrument/WaveInstrument.cpp
-        instrument/WaveSynth.cpp
+        instrument/Instrument.cpp
+        instrument/SynthInstrument.cpp
+        instrument/AssetInstrument.cpp
         Channel.cpp
         NoteFrequency.cpp
         oscillators/Oscillator.cpp
@@ -91,3 +92,17 @@ add_subdirectory (${OBOE_DIR} ./oboe)
 include_directories (${OBOE_DIR}/include)
 
 target_link_libraries(midilib log oboe) # You may have other libraries here such as `log`.
+
+
+set (LIBFAR_DIR ${PROJECT_SOURCE_DIR}/libfar)
+add_subdirectory(${LIBFAR_DIR} ./libfar)
+include_directories(${LIBFAR_DIR}/include)
+target_link_libraries(midilib libfar)
+#include(FetchContent)    #Note this
+#FetchContent_Declare(
+#        libfar                   #name of repository
+#        GIT_REPOSITORY https://github.com/djeedai/libfar.git
+#        GIT_TAG djeedai-patch-1
+#)
+#FetchContent_MakeAvailable(libfar)
+#target_link_libraries(midilib libfar)
