--- a/midilib/build.gradle
+++ b/midilib/build.gradle
@@ -15,7 +15,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         externalNativeBuild {
             cmake {
-                cppFlags ''
+                cppFlags "-std=c++20 -fexceptions"
             }
         }
     }
