--- a/midilib/build.gradle
+++ b/midilib/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file(findProperty("SigningConfig_storeFile"))
+            storePassword findProperty("SigningConfig_storePassword")
+            keyAlias findProperty("SigningConfig_keyAlias")
+            keyPassword findProperty("SigningConfig_keyPassword")
+        }
+    }
     namespace 'com.example.midilib'
     compileSdk 33
 
@@ -18,6 +26,7 @@ android {
                 cppFlags "-std=c++20 -fexceptions"
             }
         }
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
@@ -42,11 +51,13 @@ android {
             version '3.22.1'
         }
     }
+    ndkVersion '25.2.9519653'
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
