--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.audio.low_latency" />
     <uses-feature
-        android:name="android.software.midi"
-        android:required="true" />
+        android:name="android.hardware.audio.low_latency"
+        android:required="true"
+        />
 
     <application
         android:allowBackup="true"
